Adder ^2
